--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
 	"name": "novaxis-language/novaxis",
 	"description": "A configuration programming language",
 	"type": "library",
-	"license": "CC-BY-NC-ND-4.0",
-	"version": "1.8.1",
+	"license": "BSD-3-Clause",
+	"version": "1.8.3",
 	"autoload": {
 		"psr-4": {
 			"Novaxis\\": "src/"
