--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description": "A configuration programming language",
 	"type": "library",
 	"license": "BSD-3-Clause",
-	"version": "1.8.4",
+	"version": "1.9.0-beta",
 	"autoload": {
 		"psr-4": {
 			"Novaxis\\": "src/"
